--- a/static/css/common.css
+++ b/static/css/common.css
@@ -8,12 +8,7 @@
 }
 
 * + * {
-    margin-left: 0.5rem;
-    margin-right: 0.5rem;
-}
-
-* + *, {
-    margin-top: 1.125rem;
+    margin: 1.25rem 0.5rem 0 0.5rem;
 }
 
 body, br, li, dt, dd, th, td, option {
@@ -21,12 +16,12 @@ body, br, li, dt, dd, th, td, option {
 }
 
 a {
-    color: #2366d1;
+    padding: 0.25em;
     text-decoration: none;
 }
 
 body {
-    background: #000;
+    background: #131428;
     color: #f8f8f8;
     font-family: 'Quattrocento Sans', sans;
     line-height: 1.5;
@@ -38,7 +33,7 @@ footer hr ~ p {
 }
 
 h1 {
-    font-size: 2.618em;  /* Golden ratio * Golden ratio */
+    font-size: 2.618rem;  /* Golden ratio * Golden ratio */
 }
 
 h1[id^=community-collaboration],
@@ -49,7 +44,11 @@ h1[id^=you-are-free] ~ * {
 }
 
 h2 {
-    font-size: 1.618em;  /* Golden ratio */
+    font-size: 1.618rem;  /* Golden ratio */
+}
+
+h3 {
+    font-size: 1.318rem;
 }
 
 h2 span,
@@ -79,7 +78,8 @@ main {
 }
 
 main h1,
-main h2 {
+main h2,
+main h3 {
     display: block;
     margin-bottom: 1em;
     margin-top: 1em;
@@ -88,6 +88,11 @@ main h2 {
 
 section:first-child h1 {
     display: inline-block;
+}
+
+h1[id^=sabayon-linux] + p a {
+    background-color: #d62c1a;
+    color: #f8f8f8;
 }
 
 main h1 ~ p {
@@ -103,6 +108,11 @@ nav {
 nav ul {
     min-height: 35px;
     vertical-align: bottom;
+}
+
+a {
+    background-color: transparent;
+    color: #28f;
 }
 
 nav > a {
@@ -122,6 +132,8 @@ nav > a {
 p {
     margin-left: 0;
     margin-right: 0;
+    padding-left: 0.5em;
+    padding-right: 0.5em;
 }
 
 section {
@@ -134,7 +146,7 @@ footer section {
 
 section:nth-child(2n) {
     background: #f8f8f8;
-    color: #000;
+    color: #131428;
 }
 
 section:first-of-type {
@@ -142,7 +154,7 @@ section:first-of-type {
 }
 
 section:last-of-type {
-    background: #000;
+    background: #131428;
     color: #f8f8f8;
 }
 
@@ -188,7 +200,16 @@ section li:nth-last-child(4):first-child,
 section li:nth-last-child(4):first-child ~ li,
 section li:nth-last-child(8):first-child,
 section li:nth-last-child(8):first-child ~ li {
-    flex-basis: 25%;
+    flex-basis: 100%;
+}
+
+@media (min-width:564px) {
+    section li:nth-last-child(4):first-child,
+    section li:nth-last-child(4):first-child ~ li,
+    section li:nth-last-child(8):first-child,
+    section li:nth-last-child(8):first-child ~ li {
+        flex-basis: 25%;
+    }
 }
 
 section ul li p {
@@ -206,6 +227,12 @@ ul ul {
     flex-flow: column wrap;
 }
 
+ul ul li,
+ul ul li + li {
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
+}
+
 .fa-bug {
     color: #ffaa15;
 }
@@ -215,8 +242,19 @@ ul ul {
     transition: transform 200ms linear;
 }
 
+.headroom ul {
+    position: static;
+    transform: translateX(0%);
+}
+
+.headroom--top ul {
+    position: absolute;
+    top: 0;
+    transform: translateX(110%);
+}
+
 .headroom--pinned {
-    background: #000;
+    background: #131428;
     border-radius: 0;
     position: fixed;
     top: 0;
