--- a/static/css/common.css
+++ b/static/css/common.css
@@ -20,6 +20,13 @@ a {
     text-decoration: none;
 }
 
+aside > * {
+    margin-left: 0;
+    margin-right: 0;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+}
+
 body {
     background: #131428;
     color: #f8f8f8;
@@ -74,7 +81,9 @@ img {
 }
 
 main {
+    display: flex;
     margin-top: 35px;
+    max-width: 100%;
 }
 
 main h1,
@@ -84,6 +93,19 @@ main h3 {
     margin-bottom: 1em;
     margin-top: 1em;
     text-align: center;
+}
+
+main article {
+    flex: 2 0 auto;
+}
+
+main aside {
+    flex: 1 1 auto;
+}
+
+main article,
+main aside {
+    max-width: 100%;
 }
 
 section:first-child h1 {
@@ -152,6 +174,7 @@ footer section {
     min-height: 0;
 }
 
+aside > *,
 section:nth-child(2n) {
     background: #f8f8f8;
     color: #131428;
