--- a/static/css/common.css
+++ b/static/css/common.css
@@ -1,7 +1,6 @@
 * {
     box-sizing: inherit;
     color. inherit;
-    float: none;
     font-family: inherit;
     line-height: inherit;
     margin: 0;
@@ -104,17 +103,20 @@ main h3 {
     text-align: center;
 }
 
-main article {
-    flex: 2 1 0;
-}
-
-main aside {
-    flex: 1 1 0;
-}
-
 main article,
 main aside {
+    flex: 1 0 auto;
     max-width: 100%;
+}
+
+@media (min-width:641px) {
+    main article {
+        flex: 2 1 0;
+    }
+
+    main aside {
+        flex: 1 1 0;
+    }
 }
 
 section:first-child h1 {
@@ -225,7 +227,8 @@ section ul li + li {
 }
 
 nav ul,
-section ul {
+section ul,
+article ul {
     display: flex;
     flex-flow: row wrap;
     justify-content: space-around;
@@ -358,10 +361,6 @@ a[href='https://plus.google.com/+sabayon']::before {
     content: "\f1a0";
 }
 
-a[href='https://atlas.hashicorp.com/Sabayon/boxes/spinbase-amd64']::before {
-    background-image: url("/img/vagrantcloud-logo.png");
-}
-
 a[href$='/donate'] {
     display: inline-block;
     font-size: inherit;
@@ -446,4 +445,108 @@ img[src="https://joostruis.files.wordpress.com/2015/09/plasma_sab.png?w=582&h=21
     display: block;
     margin-left: auto;
     margin-right: auto;
+}
+
+a[href='https://hub.docker.com/u/sabayon/dashboard/']::before {
+    background-image: url("/img/docker-logo.png");
+}
+
+a[href='https://atlas.hashicorp.com/Sabayon/boxes/spinbase-amd64']::before {
+    background-image: url("/img/vagrantcloud-logo.png");
+}
+
+h4[id^=vagrantcloud] a::before {
+    content: "";
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+a[href$='SpinBase.box']::before {
+    background-image: url("/img/vagrant-logo.png");
+}
+
+a[href$='SpinBase-ovz.tar.gz']::before {
+    background-image: url("/img/virtualbox-logo.png");
+}
+
+a[href$='SpinBase-qemu.tar.gz']::before {
+    background-image: url("/img/qemu-logo.png");
+}
+
+h4 a::before {
+    content: " ";
+    display: block;
+    background-color: #ddd;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 80px; /* 110px height - 10px padding-top - 10px padding-botttom */
+    height: 110px;
+    width: 110px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 10px 16px;
+    border-radius: 35px;
+    box-sizing: border-box;
+    vertical-align: top;
+}
+
+h4 a[href$='/donate']::before {
+    content: "\f004";
+    display: inline-block;
+    font: normal normal normal 14px/1 FontAwesome;
+    font-size: inherit;
+    line-height: inherit;
+    color: #fff;
+    background: inherit;
+    border-color: inherit;
+    height: auto;
+    width: auto;
+    margin-right: 0.2em;
+    padding: 0;
+    border-radius: 0;
+    vertical-align: middle;
+}
+
+li li a {
+    display: inline-block;
+    color: #fff;
+    background: #000;
+    font-size: 13px;
+    font-weight: normal;
+    text-align: center;
+    line-height: 1.5;
+    vertical-align: middle;
+    padding: 1px 5px;
+    border: 1px solid #2c3e50;
+    border-width: 2px;
+    border-radius: 3px;
+}
+
+li li a:after,
+li li a:focus,
+li li a:hover {
+    color: #fff;
+    background: #1a242f;
+    border-color: #000;
+    text-decoration: none;
+}
+
+li li a::before {
+    content: "\f0c1";
+    display: inline-block;
+    font: normal normal normal 14px/1 FontAwesome;
+    margin-right: 0.2em;
+}
+
+li li a[href$='.box']::before {
+    content: "\f019";
+}
+
+li li a[href$='.box.md5']::before {
+    content: "\f14a";
+}
+
+li li a[href$='.iso.pkglist']::before {
+    content: "\f03a";
 }
