--- a/layouts/_default/summary.html
+++ b/layouts/_default/summary.html
@@ -1,9 +1,13 @@
 <div class="well well-sm">
     <h4>
-        <a href="{{ .Permalink }}">{{ .Title }}</a> <small class="pull-right">Posted on {{ .Date.Format "Jan 2, 2006" }}</small><br>
+        <a href="{{ .Permalink }}">{{ .Title }}</a>
+        <small class="pull-right">Posted on {{ .Date.Format "Jan 2, 2006" }}</small>
+        <br />
         <small>{{ .Description }}</small>
     </h4>
-    <hr>
+    <hr />
     <p>{{ .Summary }}</p>
-    <a class="btn btn-primary btn-xs" href="{{ .Permalink }}">Read More <span class="fa fa-angle-double-right"></span></a>
+    <a class="btn btn-primary btn-xs" href="{{ .Permalink }}">
+        Read More <span class="fa fa-angle-double-right"></span>
+    </a>
 </div>
