Adapted layout for articles and releases.

--- a/layouts/partials/footer.includes.html
+++ b/layouts/partials/footer.includes.html
@@ -2,3 +2,4 @@
 <script type="text/javascript" src="/js/headroom.min.js"></script>
 <script type="text/javascript" src="/js/common.js"></script>
 <script type="text/javascript" src="/js/script.js"></script>
+<link rel="stylesheet" type="text/css" href="/css/colours.css" />
