--- a/layouts/release/single.html
+++ b/layouts/release/single.html
@@ -1,50 +1,59 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <meta charset="utf-8" />
-        <title>{{ .Title }} - {{ .Site.BaseURL }}</title>
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="description" content="{{ .Description }}" />
-        <meta name="author" content="Sabayonlinux crew" />
-        <link rel="canonical" href="{{ .Permalink }}">
-        <link rel="shortcut icon" href="https://www.sabayon.org/sites/all/themes/sabayon/favicon.ico" type="image/vnd.microsoft.icon" />
-        {{ if .RSSlink }}<link href="{{ .RSSlink }}" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" />{{ end }}
+        {{ partial "meta.html" . }}
         {{ partial "header.includes.html" . }}
     </head>
     <body>
-        {{ partial "navbar.html" . }}
-        <div class="container">
-            <div class="row">
-                <div class="col-md-9">
-                    <div class="well well-sm">
-                        <h3>{{ .Title }}<br> <small>{{ .Description }}</small></h3>
-                        <hr>
-                        {{ .Content }}
-                    </div>
-                </div>
+        <header>
+            {{ partial "navbar.html" . }}
+        </header>
 
-                <!-- Sidebar -->
-                <div class="col-md-3">
-                    <div class="well well-sm"> <!-- Post-specific stats -->
-                        <h4>{{ .Date.Format "January 2, 2006" }}<br>
-                            <small>{{ .WordCount }} words</small></h4>
-                        <hr>
-                        <strong>Categories</strong>
-                        <ul class="list-unstyled">
-                            {{ range .Params.categories }}
-                            <li><a href="/categories/{{ . | urlize }}">{{ . }}</a></li>
-                            {{ end }}
-                        </ul>
-                        <hr>
-                        <strong>Tags</strong><br>
-                        {{ range .Params.tags }}<a class="label label-default" href="/tags/{{ . | urlize }}">{{ . }}</a> {{ end }}
-                    </div>
-                    {{ partial "menu.html" . }}
+        <main>
+            <article>
+                <h3>{{ .Title }}<br /> <small>{{ .Description }}</small></h3>
+                <hr />
+                {{ .Content }}
+            </article>
+            
+            <aside>
+                <h4>
+                    {{ .Date.Format "January 2, 2006" }}<br />
+                    <small>{{ .WordCount }} words</small>
+                </h4>
+                <hr />
+                <div>
+                    <strong>Categories</strong>
+                    <ul class="list-unstyled">
+                        {{ range .Params.categories }}
+                            <li>
+                                <a href="/categories/{{ . | urlize }}">
+                                    {{ . }}
+                                </a>
+                            </li>
+                        {{ end }}
+                    </ul>
                 </div>
-            </div>
-            {{ partial "footer.copyright.html" . }}
-        </div>
-        {{ partial "footer.includes.html" . }}
+                <hr />
+                <div>
+                    <strong>Tags</strong><br />
+                    {{ range .Params.tags }}
+                        <a class="label label-default" href="/tags/{{ . | urlize }}">
+                            {{ . }}
+                        </a>
+                    {{ end }}
+                </div>
+                {{ partial "menu.html" . }}
+            </aside>
+        </main>
+
+        <footer>
+            {{ range .Data.Pages }}
+                {{ if eq .Type "footer" }}
+                    <section>{{ .Content }}</section>
+                {{ end }}
+            {{ end }}
+            {{ partial "footer.includes.html" . }}
+        </footer>
     </body>
 </html>
