More streamlining and cleanups

--- a/layouts/404.html
+++ b/layouts/404.html
@@ -23,6 +23,7 @@
     <p>I couldn't find what you were looking for! The admins was notified, don't worry!</p>
   </div>
     </div>
-{{ partial "footer.copyright.html" . }}
 </div>
 {{ partial "footer.includes.html" . }}
+</body>
+</html>
