--- a/layouts/indexes/category.html
+++ b/layouts/indexes/category.html
@@ -1,40 +1,41 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <meta charset="utf-8" />
-        <title>{{ .Title }} - {{ .Site.BaseURL }}</title>
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="description" content="{{ .Description }}" />
-        <meta name="author" content="Sabayonlinux crew" />
-        <link rel="canonical" href="{{ .Permalink }}">
-        <link rel="shortcut icon" href="https://www.sabayon.org/sites/all/themes/sabayon/favicon.ico" type="image/vnd.microsoft.icon" />
-        {{ if .RSSlink }}<link href="{{ .RSSlink }}" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" />{{ end }}
+        {{ partial "meta.html" . }}
         {{ partial "header.includes.html" . }}
     </head>
-<body>
-{{ partial "navbar.html" . }}
-<div class="container">
-    <div class="row">
-        <div class="col-md-9">
-            <div class="well well-sm">
-                <strong>Items in category <code>{{ .Title | lower }}</code></strong>
-                <ul class="list-unstyled">
+    <body>
+        <header>
+            {{ partial "navbar.html" . }}
+        </header>
+
+        <main>
+            <article>
+                <p>
+                    <strong>
+                        Items in category <code>{{ .Title | lower }}</code>
+                    </strong>
+                </p>
+
+                <ol>
                     {{ range .Data.Pages }}
                         {{ .Render "li" }}
-                    {{ end}}
-                </ul>
-            </div>
-        </div>
+                    {{ end }}
+                </ol>
+            </article>
 
-        <!-- Sidebar -->
-        <div class="col-md-3">
-	        {{ partial "menu.html" . }}
-        </div>
-        {{ partial "footer.copyright.html" . }}
-    </div>
-        {{ partial "footer.includes.html" . }}
+            <aside>
+	            {{ partial "menu.html" . }}
+            </aside>
+        </main>
+        
+        <footer>
+            {{ range .Data.Pages }}
+                {{ if eq .Type "footer" }}
+                    <section>{{ .Content }}</section>
+                {{ end }}
+            {{ end }}
+            {{ partial "footer.includes.html" . }}
+        </footer>
     </body>
 </html>
-
-
