--- a/layouts/partials/header.includes.html
+++ b/layouts/partials/header.includes.html
@@ -1,3 +1,4 @@
 <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Quattrocento+Sans:400,400italic,700,700italic" />
 <link rel="stylesheet" type="text/css" href="/css/font-awesome.css" />
 <link rel="stylesheet" type="text/css" href="/css/grid.css" />
+<link rel="stylesheet" type="text/css" href="/css/typography.css" />
