--- a/layouts/release/summary.html
+++ b/layouts/release/summary.html
@@ -1,9 +1,18 @@
-<div class="well well-sm">
+<section>
     <h4>
-        <a href="{{ .Permalink }}">{{ .Title }}</a> <small class="pull-right">Posted on {{ .Date.Format "Jan 2, 2006" }}</small><br>
-        <small>{{ .Description }}</small>
+        <a href="{{ .Permalink }}">{{ .Title }}</a>
+        <small>Posted on {{ .Date.Format "Jan 2, 2006" }}</small>
+        {{ if .Description }}
+            <br />
+            <small>{{ .Description }}</small>
+        {{ end }}
     </h4>
-    <hr>
-    <p>{{ .Summary }}</p>
-    <a class="btn btn-primary btn-xs" href="{{ .Permalink }}">Read More <span class="fa fa-angle-double-right"></span></a>
-</div>
+
+    <hr />
+    <p>
+        {{ .Summary }}
+        <a href="{{ .Permalink }}">
+            Read More <span class="fa fa-angle-double-right"></span>
+        </a>
+    </p>
+</section>
