--- a/static/css/grid.css
+++ b/static/css/grid.css
@@ -16,13 +16,30 @@
     margin: 1.25rem 0.5rem 0 0.5rem;
 }
 
+a + a {
+    margin: 0;
+}
+
+li + li {
+    padding-bottom: 1em;
+}
+
 body, br, li, dt, dd, th, td, option {
       margin-top: 0;
 }
 
+body {
+    line-height: 1.5;
+}
+
 a {
-    padding: 0.25em;
-    text-decoration: none;
+    display: inline-block;
+    padding: 0 0.25em;
+}
+
+a[href$='.jpg'],
+a[href$='.png'] {
+    display: block;
 }
 
 article,
@@ -35,43 +52,13 @@ aside > * {
     padding-right: 0.5rem;
 }
 
-body {
-    background: #131428;
-    color: #f8f8f8;
-    font-family: 'Quattrocento Sans', sans;
-    line-height: 1.5;
-}
-
 footer hr ~ p {
-    font-size: 0.818rem;
     text-align: center;
-}
-
-h1 {
-    font-size: 2.618rem;  /* Golden ratio * Golden ratio */
-}
-
-h1[id^=community-collaboration],
-h1[id^=community-collaboration] ~ *,
-h1[id^=you-are-free],
-h1[id^=you-are-free] ~ * {
-    color: #f8f8f8;
-}
-
-h2 {
-    font-size: 1.618rem;  /* Golden ratio */
-}
-
-h3 {
-    font-size: 1.318rem;
 }
 
 h2 span,
 h3 span {
     display: block;
-    font: normal normal normal 14px/1 FontAwesome;
-    font-size: 3em;
-    text-rendering: auto;
 }
 
 hr {
@@ -88,6 +75,11 @@ img {
     max-width: 100%;
 }
 
+li li:first-child {
+    margin-left: 0.5rem;
+    margin-right: 0.5rem;
+}
+
 main {
     display: flex;
     flex-flow: row wrap;
@@ -96,7 +88,8 @@ main {
 
 main h1,
 main h2,
-main h3 {
+main h3,
+main h4 {
     display: block;
     margin-bottom: 1em;
     margin-top: 1em;
@@ -121,11 +114,6 @@ main aside {
 
 section:first-child h1 {
     display: inline-block;
-}
-
-h1[id^=sabayon-linux] ~ p a[href$="/download"] {
-    background-color: #d62c1a;
-    color: #f8f8f8;
 }
 
 h1[id^=sabayon-linux] ~ p a {
@@ -168,18 +156,7 @@ nav.plus ul {
     overflow: hidden;
 }
 
-a,
-.more-links {
-    background-color: transparent;
-    color: #28f;
-}
-
 nav > a {
-    background-clip: content-box;
-    background-image: url("/img/navbar_sabayon_logo_trans.png");
-    background-repeat: no-repeat;
-    background-size: 153px 35px;
-    color: transparent;
     display: inline-block;
     height: 35px;
     position: absolute;
@@ -201,24 +178,12 @@ section {
     max-width: 100%;
 }
 
-footer section {
+article section {
     min-height: 0;
 }
 
-article,
-aside > *,
-section:nth-child(2n) {
-    background: #f8f8f8;
-    color: #131428;
-}
-
-section:first-of-type {
-    background-attachment: fixed;
-}
-
-section:last-of-type {
-    background: #131428;
-    color: #f8f8f8;
+footer section {
+    min-height: 0;
 }
 
 section ul,
@@ -300,17 +265,12 @@ ul ul li + li {
     margin-bottom: 0.5em;
 }
 
-.fa-bug {
-    color: #ffaa15;
-}
-
 .headroom {
     will-change: transform;
     transition: transform 200ms linear;
 }
 
 .headroom--pinned {
-    background: #131428;
     border-radius: 0;
     position: fixed;
     top: 0;
@@ -339,49 +299,14 @@ a[href='https://atlas.hashicorp.com/Sabayon/boxes/spinbase-amd64']::before,
 a[href='https://www.facebook.com/groups/36125411841']::before,
 a[href='https://plus.google.com/+sabayon']::before {
     display: inline-block;
-    font: normal normal normal 14px/1 FontAwesome;
     margin-right: 0.2em;
 }
 
-a[href$='.iso']::before,
-a[href$='.img.xz']::before {
-    content: "\f019";
-}
-
-a[href='https://hub.docker.com/r/sabayon']::before,
-a[href='https://atlas.hashicorp.com/Sabayon/boxes/spinbase-amd64']::before {
-    content: "\f0c2";
-}
-
-a[href='https://www.facebook.com/groups/36125411841']::before {
-    content: "\f09a";
-}
-
-a[href='https://plus.google.com/+sabayon']::before {
-    content: "\f1a0";
-}
-
 a[href$='/donate'] {
-    display: inline-block;
-    font-size: inherit;
-    line-height: 1.5;
-}
-
-a[href$='/donate'] {
-    color: #fff;
-    background: #e74c3c;
-    border: 2px solid #e74c3c;
+    border: 2px solid inherit;
     border-radius: 3px;
+    display: inline-block;
     padding: 1px 5px;
-}
-
-a[href$='/donate']:active,
-a[href$='/donate']:focus,
-a[href$='/donate']:hover {
-    color: #fff;
-    background: #d62c1a;
-    border-color: #cd2a19;
-    text-decoration: none;
 }
 
 a[href$='/donate']::before,
@@ -391,11 +316,6 @@ a[href$='/desktop']::before,
 a[href$='/server']::before,
 a[href='http://dl.sabayon.org/iso/daily/daily.html']::before {
     display: block;
-    font: normal normal normal 14px/1 FontAwesome;
-    font-size: inherit;
-    line-height: inherit;
-    background: inherit;
-    border-color: inherit;
     height: auto;
     width: auto;
     padding: 0;
@@ -404,8 +324,6 @@ a[href='http://dl.sabayon.org/iso/daily/daily.html']::before {
 }
 
 a[href$='/donate']::before {
-    content: "\f004";
-    color: #fff;
     display: inline-block;
     margin-left: 0.2em;
     margin-right: 0.2em;
@@ -417,63 +335,18 @@ a[href$='/donate']::after {
     margin-right: 0;
 }
 
-a[href$='/cloud']::before,
-a[href$='/desktop']::before,
-a[href$='/server']::before,
-a[href='http://dl.sabayon.org/iso/daily/daily.html']::before {
-    font-size: 3em;
-}
-
-a[href$='/cloud']::before {
-    content: "\f0c2";
-}
-
-a[href$='/desktop']::before {
-    content: "\f108";
-}
-
-a[href$='/server']::before {
-    content: "\f233";
-}
-
-a[href='http://dl.sabayon.org/iso/daily/daily.html']::before {
-    content: "\f0c3";
-}
-
-a[href='https://hub.docker.com/u/sabayon/dashboard/']::before {
-    background-image: url("/img/docker-logo.png");
-}
-
-a[href='https://atlas.hashicorp.com/Sabayon/boxes/spinbase-amd64']::before {
-    background-image: url("/img/vagrantcloud-logo.png");
-}
-
 h4[id^=vagrantcloud] a::before {
-    content: "";
     display: block;
     margin-left: auto;
     margin-right: auto;
 }
 
-a[href$='SpinBase.box']::before {
-    background-image: url("/img/vagrant-logo.png");
-}
-
-a[href$='SpinBase-ovz.tar.gz']::before {
-    background-image: url("/img/virtualbox-logo.png");
-}
-
-a[href$='SpinBase-qemu.tar.gz']::before {
-    background-image: url("/img/qemu-logo.png");
-}
-
 h4 a::before {
-    content: " ";
-    display: block;
-    background-color: #ddd;
     background-repeat: no-repeat;
     background-position: center;
     background-size: 80px; /* 110px height - 10px padding-top - 10px padding-botttom */
+    content: " ";
+    display: block;
     height: 110px;
     width: 110px;
     margin-left: auto;
@@ -484,64 +357,22 @@ h4 a::before {
     vertical-align: top;
 }
 
-h4 a[href$='/donate']::before {
-    content: "\f004";
-    display: inline-block;
-    font: normal normal normal 14px/1 FontAwesome;
-    font-size: inherit;
-    line-height: inherit;
-    color: #fff;
-    background: inherit;
-    border-color: inherit;
-    height: auto;
-    width: auto;
-    margin-right: 0.2em;
-    padding: 0;
-    border-radius: 0;
-    vertical-align: middle;
+article section h4 a::before {
+    display: inline;
 }
 
-li li a {
+article li li a {
     display: inline-block;
-    color: #fff;
-    background: #000;
-    font-size: 13px;
-    font-weight: normal;
     text-align: center;
-    line-height: 1.5;
     vertical-align: middle;
     padding: 1px 5px;
-    border: 1px solid #2c3e50;
-    border-width: 2px;
+    border: 2px solid inherit;
     border-radius: 3px;
 }
 
-li li a:after,
-li li a:focus,
-li li a:hover {
-    color: #fff;
-    background: #1a242f;
-    border-color: #000;
-    text-decoration: none;
-}
-
-li li a::before {
-    content: "\f0c1";
+article li li a::before {
     display: inline-block;
-    font: normal normal normal 14px/1 FontAwesome;
     margin-right: 0.2em;
-}
-
-li li a[href$='.box']::before {
-    content: "\f019";
-}
-
-li li a[href$='.box.md5']::before {
-    content: "\f14a";
-}
-
-li li a[href$='.iso.pkglist']::before {
-    content: "\f03a";
 }
 
 img[src$='fluxbox-logo.png'],
