--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="dark theme">
     <head>
         {{ partial "meta.html" . }}
         <link rel="stylesheet" href="/css/normalize.css" />
